feat: add separated componets to header

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,3 +5,14 @@
     padding: 1rem;
     border-radius: 0.5rem;
 }
+
+.header-top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo{
+    width: 100px;
+    display: block;
+}
+
