--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,8 +1,9 @@
-.app-button{
+.button{
     grid-area: button;
     background-color: #303030;
     border: 1px solid #444444;
     padding: 1rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    text-align: center;
 }
