--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 1rem auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 2fr 50px;
+  grid-template-rows: auto auto auto 50px;
   grid-template-areas:  "header header"
                         "question question"
                         "answers description"
@@ -13,8 +13,9 @@
 
 @media screen and (max-width: 756px) {
   .app-container {
+    margin: 1rem;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 2fr 2fr 50px;
+    grid-template-rows:  auto auto auto auto 50px;
     grid-template-areas:  "header"
                           "question"
                           "answers"
