--- a/src/components/Header/Levels/style.css
+++ b/src/components/Header/Levels/style.css
@@ -4,13 +4,7 @@
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
-    padding: 0;
-   
+    padding: 1rem 0;
+    margin:0;
 }
-.list-item{
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-    border: 1px solid #444444;
-    border-radius: 0.5rem;
-    min-width: 100px;
-}
+
