--- a/src/components/Question/style.css
+++ b/src/components/Question/style.css
@@ -4,4 +4,19 @@
     border: 1px solid #444444;
     padding: 1rem;
     border-radius: 0.5rem;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas: 'image name'
+                         'audio audio';
 }
+.question__name{
+    grid-area: name;
+    align-self: center;
+    text-align: center;
+    font-size: 2rem;
+}
+.question__image{
+    grid-area: image;
+}
+
