--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
   max-width: 1100px;
-  margin: 1rem auto;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto 50px;
@@ -22,4 +22,22 @@
                           "description"
                           "button";
   }
+}
+
+.rhap_container{
+  background-color: #282c34 !important;
+  border-radius: 0.5rem;
+  grid-area: audio;
+}
+.rhap_progress-indicator{
+  background-color: #77b269 !important;
+}
+.rhap_total-time,
+.rhap_current-time{
+  color: #77b269 !important;
+}
+.rhap_play-pause-button {
+  font-size: 30px !important;
+  width: 30px !important;
+  height: 30px !important;
 }
