--- a/src/components/Answers/style.css
+++ b/src/components/Answers/style.css
@@ -1,7 +1,6 @@
 .answers{
     grid-area: answers;
-    background-color: #303030;
-    border: 1px solid #444444;
+    background-color: #3c4855;
     border-radius: 0.5rem;
     padding: 1rem;
 }
