--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,7 +1,6 @@
 .button{
     grid-area: button;
-    background-color: #303030;
-    border: 1px solid #444444;
+    border: 1px solid #3c4855;
     padding: 1rem;
     border-radius: 0.5rem;
     cursor: pointer;
