--- a/src/components/Description/style.css
+++ b/src/components/Description/style.css
@@ -1,12 +1,12 @@
 .description{
     grid-area: description;
-    background-color: #303030;
+    background-color:#3c4855;
     border: 1px solid #444444;
     padding: 1rem;
     border-radius: 0.5rem;
     display: grid;
     align-items: top;
-    grid-template-rows: 2fr 1fr auto;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 'image name'
                          'audio audio'
@@ -14,6 +14,7 @@
 }
 .description__image{
     grid-area: image;
+    padding-bottom: 1rem;
 }
 .description__name{
     grid-area: name;
