--- a/src/components/Header/Levels/LevelItem/style.css
+++ b/src/components/Header/Levels/LevelItem/style.css
@@ -3,7 +3,7 @@
     margin-bottom: 0.5rem;
     margin-right: 0.5rem;
     border-radius: 0.5rem;
-    min-width: 100px;
+    width: 120px;
     background-color: #3d7270;
     text-align: center;
 }
